--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
 	<h1> Ashley Radford </h1>
+	<img src="https://i.imgur.com/ss8V5Ax.jpg"></img>
+	<ul>
+		<li><a href="https://www.linkedin.com/in/ashley-radford-892880128/">LinkedIn</a></li>
+		<li><a href="https://www.facebook.com/jaejjv3">Facebook</a></li>
+		<li><a href="https://twitter.com/xrisingherox">Twitter</a></li>
+	</ul>
 
 </body>
 </html>
