--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -2,15 +2,19 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
 </head>
 <body>
-	<h1> Ashley Radford </h1>
+	<h1> Ashley Radford </h1><br>
 	<img src="https://i.imgur.com/ss8V5Ax.jpg"></img>
-	<ul>
+	<br><h2> Links to find me </h2>
+
+	<br><h3><ul>
 		<li><a href="https://www.linkedin.com/in/ashley-radford-892880128/">LinkedIn</a></li>
 		<li><a href="https://www.facebook.com/jaejjv3">Facebook</a></li>
 		<li><a href="https://twitter.com/xrisingherox">Twitter</a></li>
-	</ul>
+	</ul></h3>
 
 </body>
 </html>
