Commit 7 - Added initial styling for resume site

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -2,19 +2,20 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
 </head>
 <body>
-	<h1> Ashley Radford </h1><br>
-	<img src="https://i.imgur.com/ss8V5Ax.jpg"></img>
-	<br><h2> Links to find me </h2>
+	<main><h1>Ashley Radford</h1></main>
 
-	<br><h3><ul>
+	<img src="https://i.imgur.com/ss8V5Ax.jpg"></img>
+	<h2> Links to find me </h2>
+
+	<nav><h3><ul>
 		<li><a href="https://www.linkedin.com/in/ashley-radford-892880128/">LinkedIn</a></li>
 		<li><a href="https://www.facebook.com/jaejjv3">Facebook</a></li>
 		<li><a href="https://twitter.com/xrisingherox">Twitter</a></li>
-	</ul></h3>
+	</ul></nav>
 
 </body>
 </html>
