Commit 8 - Added project.html page and content

--- a/resume_page/projects/projects.html
+++ b/resume_page/projects/projects.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<title></title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -9,12 +7,14 @@
 	<main><h1>Ashley Radford</h1></main>
 
 	<img class= "me" src="https://i.imgur.com/ss8V5Ax.jpg"></img>
-	
+	<h2> Projects </h2>
+	<ul>
+		<li>Blah Blah Blah</li>
+		<li> Blah Blag Blag</li>
+		<li>Blah Blag Blah</li>
+	</ul>
 
 	<nav>
 		<a href="index.html">Home Page</a>
 		<a href="projects.html">Projects</a>
 	</nav>
-
-</body>
-</html>
