--- a/resume_page/projects.html
+++ b/resume_page/projects.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<title></title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
@@ -9,12 +8,16 @@
 	<main><h1>Ashley Radford</h1></main>
 
 	<img class= "me" src="https://i.imgur.com/ss8V5Ax.jpg"></img>
-	
+	<h2> Projects </h2>
+	<ul>
+		<li>HTML 5 CSS</li>
+		<li> JavaScript</li>
+		<li>Git-Hub</li>
+	</ul>
 
 	<nav>
 		<a href="index.html">Home Page</a>
 		<a href="projects.html">Projects</a>
 	</nav>
-
 </body>
 </html>
